# Constraint-Field-Theory

./: README.md  pyproject.toml
examples/: 01_saturation_demo.py  02_plot_saturation.py  03_coupling_demo.py
paper/: README.md  main.tex  references.bib
src/cft/: __init__.py  field.py  gv.py  sim.py
tests/: test_saturation.py
theory/: 00_manifesto.md  01_definitions.md  02_axioms.md  03_minimal_math.md  04_predictions.md  05_falsification.md  06_cft_to_gv.md  07_cft_to_ci.md  08_coupling_notes.md
