[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-field-theory"
version = "0.1.0"
description = "Minimal reference implementation for Constraint Field Theory"
authors = [{ name = "William Shacklett" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
